# polymorphism_without_inheritance

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mm  watch
